# oauth-auth0-mcp-prototype

./: .gitignore  AUTH0_PROTOTYPE_RUNBOOK.md  README.md  client_server.py  pyproject.toml  server.py
client/: index.html
tests/: test_server.py
